# bankleitzahl

./: Cargo.toml  README.md  build.rs  data.txt  update.sh
src/: data.rs  lib.rs
