[package]
name = "bankleitzahl"
version = "0.1.0"
edition = "2021"

readme = "README.md"
repository = "https://github.com/cemoktra/bankleitzahl"
description = "Giving access to german bank data (BLZ/BIC)"
keywords = ["banking", "BLZ", "bankleitzahl", "BIC"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
quote = "1.0.35"